Navegation funcionality was done

--- a/WebAppPharmaSales/src/main/webapp/WEB-INF/web.xml
+++ b/WebAppPharmaSales/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,8 @@
         <servlet-class>Controllers.HomeController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RuterController</servlet-name>
-        <servlet-class>Controllers.RuterController</servlet-class>
+        <servlet-name>SalesController</servlet-name>
+        <servlet-class>Controllers.SalesController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>AuthController</servlet-name>
@@ -19,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>HomeController</servlet-name>
         <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SalesController</servlet-name>
+        <url-pattern>/sales</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
