Login auth added and dao updated

--- a/WebAppPharmaSales/src/main/webapp/WEB-INF/web.xml
+++ b/WebAppPharmaSales/src/main/webapp/WEB-INF/web.xml
@@ -12,9 +12,13 @@
         <servlet-name>SalesController</servlet-name>
         <servlet-class>Controllers.SalesController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewSalesController</servlet-name>
+        <servlet-class>Controllers.NewSalesController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AuthController</servlet-name>
-        <url-pattern>/AuthController</url-pattern>
+        <url-pattern>/auth</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HomeController</servlet-name>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>SalesController</servlet-name>
         <url-pattern>/sales</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewSalesController</servlet-name>
+        <url-pattern>/newsales</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
