--- a/WebAppPharmaSales/pom.xml
+++ b/WebAppPharmaSales/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.32</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>1.2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
